--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "express": "^4.18.0",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
