--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mjantunes2/API---ToDoList#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.0",
     "sequelize": "^6.19.0",
